# CSC3060_Project5

./: .gitignore  CMakeLists.txt  NEW_REPORT.md  README.md  draft_kernel_optimization.md  local_push_and_test.sh  prompt.md  report.md  run_all_latest.txt  run_stu_latest.txt  scripts_README.md  server_rebuild_and_test.sh
bonus/: CMakeLists.txt  README.md  bench.h  bitwise_bonus_simd.cpp  bitwise_bonus_simd.h  bonus_notes.cpp  image_proc.cpp  image_proc.h  image_proc_bonus_omp.cpp  image_proc_bonus_omp.h  image_proc_bonus_openmp.cpp  image_proc_bonus_openmp.h  matmul_bonus_openmp.cpp  matmul_bonus_openmp.h  matmul_bonus_threaded.cpp  matmul_bonus_threaded.h  run_bonus.cpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  run_all  single_bench
include/: graph.h
src/kernel/: bitwise.cpp  blackscholes.cpp  filter_gradient.cpp  graph.cpp  grff.cpp  image_proc.cpp  matmul.cpp  relu.cpp  sparse_spmm.cpp  trace_replay.cpp
src/main/: run_stu.cpp
